--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-numpy==1.19.3
-numpy==1.16.4
-torch==1.7.1
-torch==1.7.1.info
-torch==1.9.1+cu111
-torchvision==0.10.1+cu111
+numpy                        1.24.3
+torch                        1.9.0+cu111
+torchvision                  0.10.0+cu111
